--- a/templates/detail.html
+++ b/templates/detail.html
@@ -30,10 +30,10 @@
             </div>
 
             <div class="col-md-8 mx-auto">
-            {% if object.review_set.all|length != 0 %}
+            {% if review_list|length != 0 %}
                 <h2 class="fw-bolder mb-4 mt-5 display-6" id="reviews">Customer Reviews</h2>
-                {% for review in object.review_set.all %}
-                    <div class="rounded col-lg-12 col-xl-10 p-4" style="background-color: #d2e7ff;">
+                {% for review in page_obj %}
+                    <div class="rounded col-lg-12 col-xl-10 p-4 border border-white" style="background-color: #d2e7ff;">
                         {% if review.customer == user and update_review %}
                             <p class="fw-bold" id="change">Change Your Review</p>
                             <form action="" method="POST">
@@ -61,6 +61,24 @@
                         {% endif %}
                     </div>
                 {% endfor %}
+
+
+                <div class="pagination">
+                    <span class="step-links">
+                        {% if page_obj.has_previous %}
+                            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                        </span>
+
+                        {% if page_obj.has_next %}
+                            <a href="?page={{ page_obj.next_page_number }}">next</a>
+                        {% endif %}
+                    </span>
+                </div>
+
             {% endif %}
 
             {% if user.is_authenticated %}
