--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                             <li><a class="dropdown-item" href="{% url 'category' 'Masks' %}">Masks</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'api-info' %}">API</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'api-info' %}">API</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ms-lg-4">
                     {% if user.is_authenticated %}
