--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <section class="py-5">
-    <div class="container pt-4 px-lg-5 my-5">
+    <div class="container pt-4 px-lg-5 mb-5 mt-2">
         <h1 class="display-3">Log In</h1>
         <br>
         <form method="POST">
@@ -12,7 +12,8 @@
             <button type="submit" class="btn btn-outline-secondary">Log In</button>
         </form>
         <br>
-        <p class="pb-5"><a class="link-primary" href="{% url 'password_reset' %}">Forgot your password?</a></p>
+        <p class="pb-1"><a class="link-primary" href="{% url 'password_reset' %}">Forgot your password?</a></p>
+        <p class="pb-5">Don't have an account? <a class="link-primary" href="{% url 'signup' %}">Sign up here!</a></p>
     </div>
 </section>
 {% endblock content %}
