--- a/templates/about.html
+++ b/templates/about.html
@@ -11,17 +11,21 @@ About The Sea Wolf
         <div class="col-xl-10 col-xs-12 mx-auto mb-5">
             <h4 class="display-4 mb-5">About Us</h4>
             <p>
-                <b>Aloha and welcome to your new favorite Hawaiian Surfing and Diving store!</b> We have been providing top-quality 
-                gear and accessories for surfers and divers alike since our founding in 2011. 
+                <b>Aloha and welcome to your new favorite Hawaiian Surfing and Diving store!</b> We have been providing top-quality
+                gear and accessories for surfers and divers alike since our founding in 2011.
             </p>
             <p>
-                Our goal has always been to share our passion for the ocean and all of the thrilling activities associated with it. 
-                That's why we offer an extensive selection of surfboards, fins, masks, snorkels, and 
+                Our goal has always been to share our passion for the ocean and all of the thrilling activities associated with it.
+                That's why we offer an extensive selection of surfboards, fins, masks, snorkels, and
                 everything else you need to make the most of your aquatic adventures, wherever you are.
             </p>
             <p>
-                We're proud to be a locally-owned and operated establishment, and we strive to embody the spirit of "aloha" 
+                We're proud to be a locally-owned and operated establishment, and we strive to embody the spirit of "aloha"
                 in everything we do. Order from us today and experience the true essence of surfing and diving culture!
+            </p>
+            <p>
+                <h4 class="mt-4">Come visit us at:</h4>
+                84-521 Farrington Highway, Waianae, Hawaii 96792, US
             </p>
             <figure class="figure h-100">
                 <img src="{% static 'images/shack1.jpg' %}" class="figure-img img-fluid" alt="A small shack by the beach in Hawaii">
