--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -27,7 +27,8 @@
         {% endfor %}
         <h5 class="mt-3">Order Total: ${{total|floatformat:2}}</h5>
         <hr>
-        <h5>Delivery Details:</h5>
+        <h5 class="lead">Delivery Details:</h5>
+        <h6 class="text-muted">Note: All products ship from our store in Waianae, Hawaii. To ensure products arrive undamaged, we use first class shipping!</h6>
         <p>Delivery Cost: {{delivery_total|floatformat:2}} {{delivery_currency}}</p>
         <p>Estimated Delivery Time: {{delivery_days}} business days</p>
         <h4 class="mt-3"><b>Final Order Total: ${{order_total|floatformat:2}}</b></h4>
