add carrier name to delivery details

--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -29,6 +29,7 @@
         <hr>
         <h5 class="lead">Delivery Details:</h5>
         <h6 class="text-muted">Note: All products ship from our store in Waianae, Hawaii. To ensure products arrive undamaged, we use first class shipping!</h6>
+        <p class="mb-1">Carrier: {{service_type}}</p>
         <p>Delivery Cost: {{delivery_total|floatformat:2}} {{delivery_currency}}</p>
         <p>Estimated Delivery Time: {{delivery_days}} business days</p>
         <h4 class="mt-3"><b>Final Order Total: ${{order_total|floatformat:2}}</b></h4>
