get_absolute_url added to Product model and used in product card template

--- a/templates/includes/product_card.html
+++ b/templates/includes/product_card.html
@@ -1,5 +1,5 @@
 <div class="col mb-5">
-    <a href="{% url 'detail' item.slug %}">
+    <a href="{{ item.get_absolute_url }}">
     <div class="card h-100 product_card">
         <!-- Product image-->
         <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
