--- a/templates/account/signup_success.html
+++ b/templates/account/signup_success.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 
 {% block title %}Account Created{% endblock title %}
 
@@ -15,8 +15,8 @@
         <h3 class="display-4 mb-5">Welcome to the Sea Wolf family!</h3>
         <p>Thank you for creating an account with us.</p>
         <p>Proceed to the <a href="{% url 'login' %}" class="link-primary">Log In page</a> and enter your username and password.</p>
-    
-    
+
+
     </div>
 </section>
 {% endblock content %}
