--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% load static %}
 
 {% block css %}
@@ -20,7 +20,7 @@
     <div class="container px-4 px-lg-5">
         <div class="col-11 d-flex align-items-center mb-1">
             <div class="col-7">
-            <h5 class="display-6">Featured Products</h5> 
+            <h5 class="display-6">Featured Products</h5>
             </div>
             <div class="col-6 text-center">
             <a class="px-2 link-dark" href="{% url 'category' 'surfboards' %}">Surfboards</a> <a class="px-2 link-dark" href="{% url 'category' 'snorkels' %}">Snorkels</a> <a class="px-2 link-dark" href="{% url 'category' 'fins' %}">Fins</a> <a class="px-2 link-dark" href="{% url 'category' 'masks' %}">Masks</a>
