--- a/templates/order/address.html
+++ b/templates/order/address.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% load crispy_forms_tags %}
 {% load cart_tag %}
 
@@ -24,7 +24,7 @@
                         <div class="col-sm-2 col-lg-2 col-xl-1 d-flex">
                             <p><b> {{ value.quantity }} </b></p>
                         </div>
-                        
+
                         <div class="col-sm-3 col-lg-2 col-xl-2 offset-lg-1">
                             <h5 class="mb-0">${{ value.price|multiply:value.quantity|floatformat:2 }}</h5>
                         </div>
