--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,13 @@ About The Sea Wolf
 <section class="h-100" style="background-color: #eee;" id="body-section">
     <div class="container h-100 py-5">
         <div class="col-xl-10 col-xs-12 mx-auto mb-5">
-            <h4 class="display-4 mb-5">About Us</h4>
+            <h4 class="display-4 mb-4">About The Sea Wolf</h4>
+            <p>
+                This is a project made by Kristen Martin using Python's Django framework.
+                View the source code <a href="https://github.com/KristenM4/Django-Online-Shop" class="link-primary fw-bolder">here</a> and,
+                to see my other projects, visit my <a href="https://kristenm4.github.io/" class="link-primary fw-bolder">GitHub webpage.</a>
+            </p>
+            <hr>
             <p>
                 <b>Aloha and welcome to your new favorite Hawaiian Surfing and Diving store!</b> We have been providing top-quality
                 gear and accessories for surfers and divers alike since our founding in 2011.
@@ -18,14 +24,12 @@ About The Sea Wolf
                 Our goal has always been to share our passion for the ocean and all of the thrilling activities associated with it.
                 That's why we offer an extensive selection of surfboards, fins, masks, snorkels, and
                 everything else you need to make the most of your aquatic adventures, wherever you are.
-            </p>
-            <p>
                 We're proud to be a locally-owned and operated establishment, and we strive to embody the spirit of "aloha"
                 in everything we do. Order from us today and experience the true essence of surfing and diving culture!
             </p>
             <p>
                 <h4 class="mt-4">Come visit us at:</h4>
-                84-521 Farrington Highway, Waianae, Hawaii 96792, US
+                84-521 Farrington Highway, Waianae, Hawaii 96792, US <em>(Fictional Address)</em>
             </p>
             <figure class="figure h-100">
                 <img src="{% static 'images/shack1.jpg' %}" class="figure-img img-fluid" alt="A small shack by the beach in Hawaii">
